--- a/config/database.yml
+++ b/config/database.yml
@@ -50,8 +50,9 @@ test:
 #
 production:
   <<: *default
-  adapter: postgresqL
+  adapter: mysql2
   url: <%= ENV['DATABASE_URL'] %>
   database: furima_41475_production
-  username: furima_41475
-  password: <%= ENV["FURIMA_41475_DATABASE_PASSWORD"] %>
+  username: root
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  socket: /var/lib/mysql.sock
