記述の修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -55,4 +55,4 @@ production:
   database: furima_41475_production
   username: root
   password: <%= ENV["DATABASE_PASSWORD"] %>
-  socket: /var/lib/mysql.sock
+  socket: /var/lib/mysql/mysql.sock
